summative.moria.Moria.scala.error
Compilation error:
Moria:16: error: not found: value surBiscuit
      if (surBiscuit()){
          ^Moria:22: error: not found: value surBiscuit
    if (surBiscuit()){
        ^